--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vercel/functions": "^2.0.0",
     "@vercel/otel": "^1.12.0",
     "@vercel/postgres": "^0.10.0",
+    "@vivgrid/ai-sdk-provider": "^1.0.1",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
